fixed banner and card overlap

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -15,11 +15,11 @@
 
 .banner video {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   min-width: 100%;
-  min-height: 100%;
-  height: 80%;
+  min-height: 80%;
+  height: 100%;
   object-fit: cover;
   z-index: 0;
   -ms-transform: translateX(-50%) translateY(-50%);
